# CfC_research

./: .gitignore  README.md  pyproject.toml
src/cfc_video_demo/: __init__.py  __main__.py  cfc_aerial_detector.py  cfc_motion_detector.py  cli.py
src/cfc_video_demo/datasets/: __init__.py  caltech.py  caltech_convert.py  sequence_dataset.py  yolo_cache.py
src/cfc_video_demo/inference/: __init__.py  predict_video.py  visualize.py  yolo_webcam.py
src/cfc_video_demo/models/: cnn_cfc_detector.py
src/cfc_video_demo/training/: eval.py  losses.py  metrics.py  train.py  train_yolo_refiner.py
src/cfc_video_demo/utils/: boxes.py  checkpoint.py  video.py
